--- a/src/components/contents/homePageContent/carousel/Carousel.css
+++ b/src/components/contents/homePageContent/carousel/Carousel.css
@@ -176,6 +176,17 @@
     }
 }
 
+@media screen and (max-width: 414px){
+    .item{
+        width : 320px;
+        margin-left : 90px
+    }
+
+    .itemImage{
+        width: 100%;
+    }
+}
+
 @media screen and (max-width: 375px){
     .item{
         max-width : 250px;
