--- a/src/components/header/MyNavbar.css
+++ b/src/components/header/MyNavbar.css
@@ -235,6 +235,23 @@
     color : #FFFFFF;
 }
 
+.MyProf{
+    min-width : 100%;
+    text-align: left;
+    padding-left : 10px;
+    font-size : 18px;
+    background-color : transparent;
+    border : none;
+    color : #FFFFFF;
+    height : 50px;
+    font-weight : 600;
+    cursor : pointer
+}
+.MyProf:hover{
+    background-color : transparent;
+    color : #FFFFFF;
+}
+
 
 @media screen and (max-width : 768px){
     .hide{
@@ -251,9 +268,35 @@
     }
 }
 
+@media screen and (width : 412px){
+    .loginBtn{
+        max-width : 120px;
+        font-size : 12px;
+    }
+    .newBtns{
+        width : 100px;
+        justify-content : flex-start;
+        margin-left : 70px;
+    }
+}
+
+@media screen and (max-width : 414px){
+    .loginBtn{
+        width : 100px;
+        font-size : 12px;
+    }
+}
+
 @media screen and (max-width : 375px){
     .loginBtn{
         width : 130px;
+        font-size : 12px;
+    }
+}
+
+@media screen and (max-width : 360px){
+    .loginBtn{
+        width : 100px;
         font-size : 12px;
     }
 }
