--- a/src/components/contents/allSavedProperties/AllSavedProp.css
+++ b/src/components/contents/allSavedProperties/AllSavedProp.css
@@ -34,6 +34,8 @@
     max-height : 150px;
     border-radius : 10px;
     padding-left : 5px;
+    padding-top : 5px;
+    object-fit : contain;
     padding-right : 5px;
 }
 
@@ -46,7 +48,7 @@
 
 /* address */
 .allSavedPropMainDiv .savedPropAdd{
-    font-size : 16px;
+    font-size : 14px;
     font-weight : 600;
     color : #636e72;
     padding-left : 5px
@@ -67,3 +69,71 @@
     text-align: center;
     margin-top : 50px
 }
+
+
+@media screen and (width : 912px){
+    .mainItem{
+        width : 230px
+    }
+    .savedPropHead{
+        margin-left : 15px;
+    }
+}
+
+@media screen and (width : 820px){
+    .mainItem{
+        width : 230px
+    }
+    .savedPropHead{
+        margin-left : 15px;
+    }
+}
+
+@media screen and (width : 768px){
+    .mainItem{
+        width : 230px
+    }
+    .savedPropHead{
+        margin-left : 15px;
+    }
+}
+
+@media screen and (width : 540px){
+    .mainItem{
+        width : 220px
+    }
+    .savedPropHead{
+        margin-left : 15px;
+    }
+    .SavedPropMiniText{
+        font-size : 12px
+    }
+}
+
+@media screen and (width : 414px){
+    .mainItem{
+        margin-left : 10px
+    }
+    .savedPropHead{
+        margin-left : 15px;
+    }
+}
+
+@media screen and (width : 393px){
+    .mainItem{
+        margin-left : 10px
+    }
+    .savedPropHead{
+        margin-left : 15px;
+    }
+}
+
+@media screen and (width : 390px){
+    .mainItem{
+        margin-left : 10px
+    }
+    .savedPropHead{
+        margin-left : 15px;
+    }
+}
+
